# gattaca

./: .pre-commit-config.yaml  README.md  Taskfile.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: analyze.yml  lint.yml  test.yml
benchmarks/: bench_example.py
docs/: Implementing Pareto Fronts.md  feature_list.md  index.md  problem_types.md
docs/examples/: index.md
docs/examples/function_optimization/: single_function_optimization.md
examples/function_optimization/: single_function_optimization.ipynb  single_function_optimization.py
src/gattaca/: candidate_abc.py  fast_non_dominated_sort.py  genetic_solver.py  scorer.py
test/: test_single_function_optimization.py
tests/: test_fast_non_dominated_sort.py  test_single_function_optimization.py
