[tool.poetry]
name = "gattaca"
version = "0.1.0"
description = "A library for discrete optimization using genetic algorithms."
authors = ["ccastleberry <castle.caleb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
pytest = "^7.2.0"
black = {extras = ["jupyter"], version = "^22.12.0"}
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.10.1"
bumpver = "^2022.1120"
jupyterlab = "^3.5.2"
richbench = "^1.0.3"
xenon = "^0.9.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests", "benchmarks"]
skips = ["B311"]